<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@android:color/black"
>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
        >
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/remotebash_logo_1"
                    android:id="@+id/imageRemoteBash"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="100sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
            />
            <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/usuario"
                    android:textColorHint="@android:color/darker_gray"
                    android:minWidth="180sp"
                    android:maxWidth="300sp"
                    android:padding="10sp"
                    android:layout_marginTop="50sp"
                    app:layout_constraintTop_toBottomOf="@+id/imageRemoteBash"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textColor="@android:color/white"
                    android:background="@drawable/edit_text_login"
                    android:onClick="focusUsuario"
                    android:textCursorDrawable="@drawable/cursor_layout"
            />
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/senha"
                    android:textColorLink="@color/colorAccent"
                    android:minWidth="180sp"
                    android:maxWidth="300sp"
                    android:inputType="textPassword"
                    android:textColorHint="@android:color/darker_gray"
                    android:id="@+id/editTextSenha"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
                    android:textColor="@android:color/white"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="5sp"
                    android:padding="10sp"
                    android:background="@drawable/edit_text_login"
                    android:onClick="focusSenha"
                    android:textCursorDrawable="@drawable/cursor_layout"
            />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="150sp"
                    android:height="50sp"
                    android:text="@string/logar"
                    app:layout_constraintTop_toBottomOf="@+id/editTextSenha"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_login"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="73sp"
                    android:layout_marginBottom="80sp"
                    android:onClick="logar"
                    android:id="@+id/btnLogar"
            />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>